--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -24,14 +24,15 @@ jobs:
           EXCLUDE: "/dist/, /node_modules/"
       - name: Run npm install, build and reload pm2
         uses: appleboy/ssh-action@master ## use ssh actions to run command in server
+        env: 
+          server_dir_target: ${{ secrets.SERVER_DIR_TARGET }}
         with:
           host: ${{ secrets.REMOTE_HOST }}
           username: ${{ secrets.REMOTE_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           port: 22
           script: |
-            whoami
-            cd ~/nodejs/nextjs
+            cd $server_dir_target
             npm install
             npm run build --if-present
             pm2 reload next-js
