--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -24,15 +24,13 @@ jobs:
           EXCLUDE: "/dist/, /node_modules/"
       - name: Run npm install, build and reload pm2
         uses: appleboy/ssh-action@master ## use ssh actions to run command in server
-        env: 
-          server_dir_target: ${{ secrets.SERVER_DIR_TARGET }}
         with:
           host: ${{ secrets.REMOTE_HOST }}
           username: ${{ secrets.REMOTE_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           port: 22
           script: |
-            cd $server_dir_target
+            cd ~/nodejs/nextjs
             npm install
             npm run build --if-present
             pm2 reload next-js
